exports[`SingleSelect [common] example testing should match snapshot(s) for 03.disabled-options 1`] = `
<DropMenu
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={true}>
    Red
  </DropMenu.Option>
  <DropMenu.Option>
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}>
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 04.disabled-select 1`] = `
<DropMenu
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={true}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-disabled"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option>
    Red
  </DropMenu.Option>
  <DropMenu.Option>
    Green
  </DropMenu.Option>
  <DropMenu.Option>
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 05.grouped-options 1`] = `
<DropMenu
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.OptionGroup>
    Screen
    <SingleSelect.Option>
      Red
    </SingleSelect.Option>
    <SingleSelect.Option>
      Green
    </SingleSelect.Option>
    <SingleSelect.Option>
      Blue
    </SingleSelect.Option>
    <DropMenu.Option>
      Red
    </DropMenu.Option>
    <DropMenu.Option>
      Green
    </DropMenu.Option>
    <DropMenu.Option>
      Blue
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.OptionGroup>
    Print
    <SingleSelect.Option>
      Cyan
    </SingleSelect.Option>
    <SingleSelect.Option>
      Yellow
    </SingleSelect.Option>
    <SingleSelect.Option>
      Magenta
    </SingleSelect.Option>
    <SingleSelect.Option>
      Black
    </SingleSelect.Option>
    <DropMenu.Option>
      Cyan
    </DropMenu.Option>
    <DropMenu.Option>
      Yellow
    </DropMenu.Option>
    <DropMenu.Option>
      Magenta
    </DropMenu.Option>
    <DropMenu.Option>
      Black
    </DropMenu.Option>
  </DropMenu.OptionGroup>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 06.no-unselect 1`] = `
<DropMenu
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Foo
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option>
    Red
  </DropMenu.Option>
  <DropMenu.Option>
    Green
  </DropMenu.Option>
  <DropMenu.Option>
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 08.rich-content 1`] = `
<DropMenu
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        <PlusIcon
          isBadge={true}
          style={
            Object {
              "backgroundColor": "gray",
              "marginRight": 4,
            }
          } />
         Add Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option>
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "red",
          "marginRight": 4,
        }
      } />
     Red
  </DropMenu.Option>
  <DropMenu.Option>
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "green",
          "marginRight": 4,
        }
      } />
     Green
  </DropMenu.Option>
  <DropMenu.Option>
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "blue",
          "marginRight": 4,
        }
      } />
     Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 11.stateless 1`] = `
<DropMenu
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={Object {}}
  focusedIndex={2}
  isDisabled={false}
  isExpanded={true}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={
    Array [
      1,
    ]
  }>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-highlighted lucid-SingleSelect-Control-is-selected lucid-SingleSelect-Control-is-expanded"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Green
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.NullOption>
    Select Color
  </DropMenu.NullOption>
  <DropMenu.OptionGroup>
    Preferred
    <SingleSelect.Option>
      Red
    </SingleSelect.Option>
    <SingleSelect.Option>
      Green
    </SingleSelect.Option>
    <SingleSelect.Option>
      Blue
    </SingleSelect.Option>
    <DropMenu.Option>
      Red
    </DropMenu.Option>
    <DropMenu.Option>
      Green
    </DropMenu.Option>
    <DropMenu.Option>
      Blue
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.Option>
    Orange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}>
    Violet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}>
    Brown
  </DropMenu.Option>
</DropMenu>
`;
